RESOLVED FIXED302317
REGRESSION(302392@main, amazon): PLT6 ~10%
https://bugs.webkit.org/show_bug.cgi?id=302317
Summary REGRESSION(302392@main, amazon): PLT6 ~10%
Antti Koivisto
Reported 2025-11-10 23:54:56 PST
revert
Attachments
Antti Koivisto
Comment 1 2025-11-10 23:55:12 PST
Antti Koivisto
Comment 2 2025-11-10 23:57:46 PST
EWS
Comment 3 2025-11-11 01:10:11 PST
Committed 302835@main (1dd42f3eab31): <https://commits.webkit.org/302835@main> Reviewed commits have been landed. Closing PR #53731 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.