REGRESSION(302392@main, amazon): PLT6 ~10% https://bugs.webkit.org/show_bug.cgi?id=302317 rdar://164252021

Unreviewed revert.

* Source/WebCore/css/CSSSelector.cpp:
(WebCore::complexSelectorsEqual):
(WebCore::shouldSkipForEqualMode): Deleted.
(WebCore::addSimpleSelector): Deleted.
(WebCore::addComplexSelector): Deleted.
* Source/WebCore/css/CSSSelector.h:
* Source/WebCore/css/CSSSelectorList.cpp:
(WebCore::add): Deleted.
* Source/WebCore/css/CSSSelectorList.h:
* Source/WebCore/style/RuleFeature.cpp:
(WebCore::Style::RuleFeatureSet::collectFeatures):
(WebCore::Style::addIgnoringPseudoElement): Deleted.
(WebCore::Style::RuleFeatureDeduplicationKey<RuleFeatureType>::hash const): Deleted.
(WebCore::Style::= const): Deleted.
* Source/WebCore/style/RuleFeature.h:
(WebCore::Style::RuleFeatureSet::collectFeatures):
* Source/WebCore/style/RuleSet.cpp:
(WebCore::Style::RuleSet::addRule):
* Source/WebCore/style/RuleSet.h:
* Source/WebCore/style/RuleSetBuilder.cpp:
(WebCore::Style::RuleSetBuilder::addStyleRuleWithSelectorList):
* Source/WebCore/style/RuleSetBuilder.h:

Canonical link: https://commits.webkit.org/302835@main