Source/WebCore/css/CSSSelectorList.cpp
@@ -268,11 +268,4 @@ bool CSSSelectorList::operator==(const CSSSelectorList& other) const
     return true;
 }
 
-void add(Hasher& hasher, const CSSSelectorList& list)
-{
-    for (auto& selector : list)
-        addComplexSelector(hasher, selector);
-}
-
-
 } // namespace WebCore
