Source/WebCore/css/CSSSelectorList.h
@@ -122,6 +122,4 @@ private:
     UniqueArray<CSSSelector> m_selectorArray;
 };
 
-void add(Hasher&, const CSSSelectorList&);
-
 } // namespace WebCore
