Source/WebCore/style/RuleSetBuilder.h
@@ -96,8 +96,6 @@ private:
 
     Vector<RuleSet::ResolverMutatingRule> m_collectedResolverMutatingRules;
     bool requiresStaticMediaQueryEvaluation { false };
-
-    RuleFeatureSet::CollectionContext m_featureCollectionContext;
 };
 
 }
